[package]
name = "bevy_elevation"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.6.0-rc.1"
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_dev_tools",
    "free_camera",
    "3d",
] }
reqwest = {version="0.13.2", features = ["blocking"]}
serde = "1.0.228"
serde_json = "1.0.149"

[profile.dev.package."*"]
opt-level = 3
