[package]
name = "bevy_elevation"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "bevy_dev_tools",
    "3d",
    "ui",
    "free_camera"
] }
big_space = { git="https://github.com/wesfly/big_space.git",features = ["camera"] }
dashmap = "6.2.1"
futures = "0.3.32"
image = "0.25.10"
once_cell = "1.21.4"
reqwest = {version="0.13.2", features = ["blocking"]}
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }

[profile.dev.package."*"]
opt-level = 3
